# secretgarden

./: .gitignore  Cargo.toml  README.md  release.toml  secretgarden  tests.sh
src/: ansible_lookup_plugin.py  config.rs  main.rs  secret_store.rs  ssh_agent_decryptor.rs  types.rs
src/secret_types/: mod.rs  opaque.rs  password.rs  ssh_key.rs  x509.rs
src/secret_types/x509/: mod.rs  rfc2253.rs
tests/integration/: functions.sh  make-versioned-output-assets.sh  run.sh
tests/integration/assets/versions/: 0.1.0.tar.xz  0.1.1.tar.xz  0.1.2.tar.xz  0.4.0.tar.xz  0.4.1.tar.xz
tests/integration/assets/versions/0.1.0/: id  id.pub
tests/integration/assets/versions/0.1.0/outputs/: opaque opaque  password password-64 --length 64  password password-default  ssh-key ssh-key-default  ssh-key ssh-key-default --public  ssh-key ssh-key-dsa --type dsa  ssh-key ssh-key-dsa --type dsa --public  ssh-key ssh-key-ecdsa --type ecdsa  ssh-key ssh-key-ecdsa --type ecdsa --public  ssh-key ssh-key-ecdsa-256 --type ecdsa --bits 256  ssh-key ssh-key-ecdsa-256 --type ecdsa --bits 256 --public  ssh-key ssh-key-ecdsa-384 --type ecdsa --bits 384  ssh-key ssh-key-ecdsa-384 --type ecdsa --bits 384 --public  ssh-key ssh-key-ecdsa-521 --type ecdsa --bits 521  ssh-key ssh-key-ecdsa-521 --type ecdsa --bits 521 --public  ssh-key ssh-key-ed25519 --type ed-25519  ssh-key ssh-key-ed25519 --type ed-25519 --public  ssh-key ssh-key-rsa --type rsa  ssh-key ssh-key-rsa --type rsa --public  ssh-key ssh-key-rsa-4096 --type rsa --bits 4096  ssh-key ssh-key-rsa-4096 --type rsa --bits 4096 --public
tests/integration/assets/versions/0.1.1/: id  id.pub
tests/integration/assets/versions/0.1.1/outputs/: opaque opaque-base64-stdin  password password-64 --length 64  password password-default  ssh-key ssh-key-default  ssh-key ssh-key-default --public  ssh-key ssh-key-dsa --type dsa  ssh-key ssh-key-dsa --type dsa --public  ssh-key ssh-key-ecdsa --type ecdsa  ssh-key ssh-key-ecdsa --type ecdsa --public  ssh-key ssh-key-ecdsa-256 --type ecdsa --bits 256  ssh-key ssh-key-ecdsa-256 --type ecdsa --bits 256 --public  ssh-key ssh-key-ecdsa-384 --type ecdsa --bits 384  ssh-key ssh-key-ecdsa-384 --type ecdsa --bits 384 --public  ssh-key ssh-key-ecdsa-521 --type ecdsa --bits 521  ssh-key ssh-key-ecdsa-521 --type ecdsa --bits 521 --public  ssh-key ssh-key-ed25519 --type ed-25519  ssh-key ssh-key-ed25519 --type ed-25519 --public  ssh-key ssh-key-rsa --type rsa  ssh-key ssh-key-rsa --type rsa --public  (+2 more)
