[package]
name = "secretgarden"
version = "0.1.2"
authors = ["Jesse Weaver <pianohacker@gmail.com>"]
edition = "2018"
description = "tool for generating and securely storing secrets"
license = "MPL-2.0"

[features]
# Prints each step of key derivation.
crypto-trace = []

[dependencies]
anyhow = "1.0"
base64 = "0.13.0"
bincode = "1.3"
byteorder = "1.4"
clap = "3.0.0-beta"
dirs-next = "2.0"
rust-crypto = "0.2.36"
osshkeys = "0.5.0"
rand = "0.8.3"
rust-argon2 = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2.6"
ssh-agent = "0.2.3"
tempfile = "3.2"

[dependencies.openssl-sys]
version = "0.9.61"
features = [ "vendored" ]
