[package]
name = "secretgarden"
version = "0.3.0"
authors = ["Jesse Weaver <pianohacker@gmail.com>"]
edition = "2018"
description = "tool for generating and securely storing secrets"
license = "MPL-2.0"

[features]
# Prints each step of key derivation.
crypto-trace = []

[dependencies]
anyhow = "1.0"
base64 = "0.21.0"
bincode = "1.3"
byteorder = "1.4"
clap = { version = "4.2.1", features = ["derive"] }
dirs-next = "2.0"
rust-crypto = "0.2.36"
openssl = "0.10.49"
osshkeys = "0.6.2"
rand = "0.8.5"
rust-argon2 = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2.7"
ssh-agent = "0.2.4"
tempfile = "3.5"
git-version = "0.3.5"

[dependencies.openssl-sys]
version = "0.9.84"
features = [ "vendored" ]
