[package]
name = "secretgarden"
version = "0.5.0"
authors = ["Jesse Weaver <pianohacker@gmail.com>"]
edition = "2018"
description = "tool for generating and securely storing secrets"
license = "MPL-2.0"
documentation = "https://docs.rs/secretgarden"
repository = "https://github.com/pianohacker/secretgarden"
homepage = "https://github.com/pianohacker/secretgarden"

[features]
# Prints each step of key derivation.
crypto-trace = []

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
bincode = "1.3"
byteorder = "1.5"
clap = { version = "4.5.8", features = ["derive"] }
dirs-next = "2.0"
openssl = "0.10.64"
osshkeys = "0.7.0"
rand = "0.8.5"
rust-argon2 = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2.7"
ssh-agent = "0.2.4"
tempfile = "3.10"
git-version = "0.3.9"
toml = "0.8.14"
sha2 = "0.10.8"

[dependencies.openssl-sys]
version = "0.9.102"
features = [ "vendored" ]
